syntax  = "proto3";

package proto;

service SimpleProto {
	rpc GetMessages(SimpleRequest) returns (stream SimpleResponse) {}
}

message SimpleRequest {
}

message SimpleResponse {
	string name = 1;
}
